Mobile Header Alignment fixing

--- a/css/style.css
+++ b/css/style.css
@@ -2064,6 +2064,13 @@ figure figcaption {
    =============================== */
 @media (max-width: 768px) {
 
+  .header-logo-img {
+    height: 10px;       
+    width: 5px;        
+    display: inline-block; 
+    margin-top: 0 px;
+}
+
   /* Navbar container */
   .site-navbar {
     position: fixed;
@@ -2085,8 +2092,10 @@ figure figcaption {
   /* Hamburger LEFT */
   .site-menu-toggle {
     order: 1;
-    font-size: 28px;
+    font-size: 24px;
     color: #fff;
+    align-self: start;
+   
   }
 
   /* Logo RIGHT */
@@ -2094,11 +2103,12 @@ figure figcaption {
     order: 2;
     margin: 5px;
     text-align: right;
+    align-self: center;
   }
 
   .site-logo a {
-    font-size: 18px;
-    font-weight: 700;
+    font-size: 14px;
+    font-weight: 550;
     color: #fff !important;
   }
 
